--- a/components/feature/downloads/src/main/res/values-ast/strings.xml
+++ b/components/feature/downloads/src/main/res/values-ast/strings.xml
@@ -4,11 +4,11 @@
     <string name="mozac_feature_downloads_notification_channel">Descargues</string>
 
     <!-- Text shown on the second row of a paused download notification. -->
-    <string name="mozac_feature_downloads_paused_notification_text">Posó la descarga</string>
+    <string name="mozac_feature_downloads_paused_notification_text">Descarga en posa</string>
     <!-- Text shown on the second row of an completed download notification. The filename is shown on the first row. -->
     <string name="mozac_feature_downloads_completed_notification_text2">Completóse la descarga</string>
     <!-- Text shown on the second row of an failed download notification. The filename is shown on the first row. -->
-    <string name="mozac_feature_downloads_failed_notification_text2">Falló la descarga</string>
+    <string name="mozac_feature_downloads_failed_notification_text2">La descarga falló</string>
 
     <!-- Alert dialog confirmation before download a file, this is the title. %1$s will be replaced with the name of the file. -->
     <string name="mozac_feature_downloads_dialog_title2">Baxar (%1$s)</string>
@@ -20,10 +20,10 @@
     <string name="mozac_feature_downloads_file_not_supported2">%1$s nun pue baxar esti tipu de ficheru</string>
 
     <!-- Message that appears when the downloaded file could not be opened-->
-    <string name="mozac_feature_downloads_could_not_open_file">Nun pudo abrise\'l ficheru</string>
+    <string name="mozac_feature_downloads_could_not_open_file">Nun se pudo abrir el ficheru</string>
 
     <!-- Message that appears when the downloaded file is a specific type that Android doesn't support opening-->
-    <string name="mozac_feature_downloads_open_not_supported1">Nun s\'atopó nenguna aplicación p\'abrir ficheros %1$s</string>
+    <string name="mozac_feature_downloads_open_not_supported1">Nun s\'atopó nenguna aplicación p\'abrir ficheros «%1$s»</string>
 
     <!-- Button that pauses the download when pressed -->
     <string name="mozac_feature_downloads_button_pause">Posar</string>
@@ -39,7 +39,16 @@
     <!-- Content description for close button -->
     <string name="mozac_feature_downloads_button_close">Zarrar</string>
     <!-- Title for the third party download app chooser dialog -->
-    <string name="mozac_feature_downloads_third_party_app_chooser_dialog_title">Completar l\'aición col usu de:</string>
+    <string name="mozac_feature_downloads_third_party_app_chooser_dialog_title">Completar l\'aición con:</string>
     <!-- Message that appears when trying to download with an external app fails. %1$s will be replaced with the name the external app. -->--&gt;
-    <string name="mozac_feature_downloads_unable_to_open_third_party_app">Nun ye posible abrir %1$s</string>
+    <string name="mozac_feature_downloads_unable_to_open_third_party_app">Nun ye posible abrir «%1$s»</string>
+
+    <!-- Alert dialog confirmation before cancelling downloads, this is the title   -->
+    <string name="mozac_feature_downloads_cancel_active_downloads_warning_content_title">¿Quies encaboxar les descargues privaes?</string>
+    <!-- Alert dialog confirmation before cancelling private downloads, this is the body. %1$s will be replaced with the name of the file. -->
+    <string name="mozac_feature_downloads_cancel_active_private_downloads_warning_content_body">Si zarres agora toles llingüetes privaes, va encaboxase la descarga de «%1$s». ¿De xuru que quies colar del mou de restolar en privao?</string>
+    <!-- Alert dialog confirmation before cancelling downloads, this is the positive action. -->
+    <string name="mozac_feature_downloads_cancel_active_downloads_accept">Encaboxales</string>
+    <!-- Alert dialog confirmation before cancelling downloads, this is the negative action. Leaves user in Private browsing -->
+    <string name="mozac_feature_downloads_cancel_active_private_downloads_deny">Quedar</string>
 </resources>
